--- a/index.html
+++ b/index.html
@@ -8,9 +8,49 @@
         <meta name="description" content="this a homejam template">
         <title>HomeJam | Home</title>
         <link rel="stylesheet" href="./css/style.css">
+        <script src="https://kit.fontawesome.com/2f591f9e97.js" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
+
+        <header id="main-header">
+            <div class="container">
+                <nav class="navbar">
+                    <h1>HOMEJAM</h1>
+                    <ul>
+                        <li>Search</li>
+                        <li>Help</li>
+                        <li>Account</li>
+                    </ul>
+                </nav>
+                <h2>Cari Cari</h2>
+                <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out.</p>
+                <section class="info">
+                    <div class="box">
+                        <i class="fa-solid fa-heart fa-2x"></i>
+                        <h2>456+</h2>
+                        <p>Likes Everyday</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-calendar-days fa-2x"></i>
+                        <h2>745+</h2>
+                        <p>Online Events
+                        </p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-user-tie fa-2x"></i>
+                        <h2>695+</h2>
+                        <p>Users</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-camera-movie fa-2x"></i>
+                        <h2>950+</h2>
+                        <p>Views Everyday</p>
+                    </div>
+                </section>
+            </div>
+        </header>
 
     </body>
 
