--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <body>
 
+        <!-- header | START -->
+
         <header id="main-header">
             <div class="container">
                 <nav class="navbar">
@@ -26,31 +28,41 @@
                 </nav>
                 <h2>Cari Cari</h2>
                 <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out.</p>
-                <section class="info">
-                    <div class="box">
-                        <i class="fa-solid fa-heart fa-2x"></i>
-                        <h2>456+</h2>
-                        <p>Likes Everyday</p>
-                    </div>
-                    <div class="box">
-                        <i class="fa-solid fa-calendar-days fa-2x"></i>
-                        <h2>745+</h2>
-                        <p>Online Events
-                        </p>
-                    </div>
-                    <div class="box">
-                        <i class="fa-solid fa-user-tie fa-2x"></i>
-                        <h2>695+</h2>
-                        <p>Users</p>
-                    </div>
-                    <div class="box">
-                        <i class="fa-solid fa-camera-movie fa-2x"></i>
-                        <h2>950+</h2>
-                        <p>Views Everyday</p>
-                    </div>
-                </section>
+
             </div>
         </header>
+
+        <!-- header | END -->
+
+        <!-- section-1 | START-->
+
+        <section class="info">
+            <div class="container">
+                <div class="box">
+                    <i class="fa-solid fa-heart fa-2x"></i>
+                    <h2>456+</h2>
+                    <p>Likes Everyday</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-calendar-days fa-2x"></i>
+                    <h2>745+</h2>
+                    <p>Online Events
+                    </p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-user-tie fa-2x"></i>
+                    <h2>695+</h2>
+                    <p>Users</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-camera-movie fa-2x"></i>
+                    <h2>950+</h2>
+                    <p>Views Everyday</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- section-1 | END -->
 
     </body>
 
