--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="this a homejam template">
+        <meta name="description" content="This is a homejam template">
         <title>HomeJam | Home</title>
         <link rel="stylesheet" href="./css/style.css">
+        <link rel="icon" href="./img/favicon.png">
         <script src="https://kit.fontawesome.com/2f591f9e97.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito+Sans:ital,wght@0,200;1,200&display=swap"
+            rel="stylesheet">
 
     </head>
 
@@ -19,16 +25,19 @@
         <header id="main-header">
             <div class="container">
                 <nav class="navbar">
-                    <h1>HOMEJAM</h1>
+                    <h1><a href="#main-header">HOMEJAM</a></h1>
                     <ul>
-                        <li>Search</li>
-                        <li>Help</li>
-                        <li>Account</li>
+                        <li><a href=""> <i class="fa-solid fa-magnifying-glass fa-xs "></i> Search</a> </li>
+                        <li><a href="">Help</a></li>
+                        <li><a href="">Account</a></li>
+                        <li><a href=""><i class="fa-solid fa-lock fa-xs"></i></a></li>
                     </ul>
                 </nav>
-                <h2>Cari Cari</h2>
-                <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out.</p>
-
+                <div class="clear"></div>
+                <div class="about">
+                    <h2>Cari Cari</h2>
+                    <p>Live from their sofa to yours. Get closer to your <br> favorite artists, and never miss out.</p>
+                </div>
             </div>
         </header>
 
