--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 
         <!-- section-1 | START-->
 
-        <section class="info">
+        <section id="info">
             <div class="container">
-                <div class="box">
+
+                <div class="box box-color">
                     <i class="fa-solid fa-heart fa-2x"></i>
                     <h2>456+</h2>
                     <p>Likes Everyday</p>
@@ -61,13 +62,14 @@
                 <div class="box">
                     <i class="fa-solid fa-user-tie fa-2x"></i>
                     <h2>695+</h2>
-                    <p>Users</p>
+                    <p>Online Users</p>
                 </div>
                 <div class="box">
-                    <i class="fa-solid fa-camera-movie fa-2x"></i>
+                    <i class="fa-solid fa-video fa-2x"></i>
                     <h2>950+</h2>
                     <p>Views Everyday</p>
                 </div>
+
             </div>
         </section>
 
