--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a homejam template">
-        <title>HomeJam | Home</title>
+        <title>Homejam | Home</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="icon" href="./img/favicon.png">
         <script src="https://kit.fontawesome.com/2f591f9e97.js" crossorigin="anonymous"></script>
@@ -74,6 +74,45 @@
         </section>
 
         <!-- section-1 | END -->
+
+
+        <!-- section-2 | START -->
+
+        <section id="shows">
+            <div class="container">
+                <h2> upcoming shows</h2>
+                <a href="#show">view all</a>
+                <article class="show-article">
+                    <img src="./img/person-1.png" alt="actor-1">
+                    <p>folk</p>
+                    <h3>benny dayal</h3>
+                    <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                </article>
+                <article class="show-article">
+                    <img src="./img/person-2.png" alt="actor-2">
+                    <p>Bollywood</p>
+                    <h3>Vijay Yesudas</h3>
+                    <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                </article>
+                <article class="show-article">
+                    <img src="./img/person-3.png" alt="actor-3">
+                    <p>folk</p>
+                    <h3>Andrea Jeremiah</h3>
+                    <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                </article>
+                <article class="show-article">
+                    <img src="./img/person-4.png" alt="actor-4">
+                    <p>folk</p>
+                    <h3>Shilpa Rao</h3>
+                    <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                </article>
+            </div>
+        </section>
+        <!-- section-2 | END -->
 
     </body>
 
