--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- section-1 | START-->
 
-        <section id="info">
+        <section id="info" class="bg-color">
             <div class="container">
 
                 <div class="box box-color">
@@ -78,40 +78,46 @@
 
         <!-- section-2 | START -->
 
-        <section id="shows">
+        <section id="shows" class="bg-color">
             <div class="container">
                 <h2> upcoming shows</h2>
-                <a href="#show">view all</a>
+                <a class="view-all" href="#show">view all</a>
+                <div class="clear"></div>
                 <article class="show-article">
                     <img src="./img/person-1.png" alt="actor-1">
                     <p>folk</p>
+                    <div class="clear"></div>
                     <h3>benny dayal</h3>
                     <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
-                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                    <i class="fa-solid fa-bookmark fa-lg "></i>
                 </article>
                 <article class="show-article">
                     <img src="./img/person-2.png" alt="actor-2">
                     <p>Bollywood</p>
+                    <div class="clear"></div>
                     <h3>Vijay Yesudas</h3>
                     <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
-                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                    <i class="fa-solid fa-bookmark fa-lg "></i>
                 </article>
                 <article class="show-article">
                     <img src="./img/person-3.png" alt="actor-3">
                     <p>folk</p>
+                    <div class="clear"></div>
                     <h3>Andrea Jeremiah</h3>
                     <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
-                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                    <i class="fa-solid fa-bookmark fa-lg "></i>
                 </article>
                 <article class="show-article">
                     <img src="./img/person-4.png" alt="actor-4">
                     <p>folk</p>
+                    <div class="clear"></div>
                     <h3>Shilpa Rao</h3>
                     <a href="#shows"> More info <i class="fa-solid fa-arrow-right-long"></i></a>
-                    <i class="fa-solid fa-bookmark fa-xs "></i>
+                    <i class="fa-solid fa-bookmark fa-lg "></i>
                 </article>
             </div>
         </section>
+
         <!-- section-2 | END -->
 
     </body>
