--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <h1><a href="#main-header">HOMEJAM</a></h1>
                     <ul>
                         <li><a href=""> <i class="fa-solid fa-magnifying-glass fa-xs "></i> Search</a> </li>
-                        <li><a href="">Help</a></li>
-                        <li><a href="">Account</a></li>
+                        <li><a href="#shows">Shows</a></li>
+                        <li><a href="#info">Infos</a></li>
                         <li><a href=""><i class="fa-solid fa-lock fa-xs"></i></a></li>
                     </ul>
                 </nav>
@@ -119,6 +119,63 @@
         </section>
 
         <!-- section-2 | END -->
+
+
+        <!-- section-3 | START -->
+
+        <section id="reviews" class="bg-color">
+            <div class="container">
+                <h2>reviews</h2>
+                <div class="browse">
+                    <i class="fa-solid fa-arrow-right-long "></i>
+                    <i class="fa-solid fa-arrow-left-long"></i>
+                    <p><span>1</span>/12</p>
+                </div>
+                <div class="clear"></div>
+
+                <article class="review-box">
+                    <div class="bg">
+                        <img src="./img/avatar-1.png" alt="avatar-1">
+                        <h3>hellen jummy</h3>
+                        <p class="address">🇺🇸 PALO ALTO, CA</p>
+                        <div class="clear"></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae in donec in nisi vitae.
+                            Vestibulum
+                            pellentesque eget laoreet adipiscing.</p>
+                    </div>
+                </article>
+                <article class="review-box">
+                    <div class="bg">
+                        <img src="./img/avatar-2.png" alt="avatar-2">
+                        <h3>Isaac Oluwatemil</h3>
+                        <p class="address">🇺🇸 PALO ALTO, CA</p>
+                        <div class="clear"></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae in donec in nisi vitae.
+                            Vestibulum
+                            pellentesque eget laoreet adipiscing.</p>
+                    </div>
+                </article>
+                <article class="review-box">
+                    <div class="bg">
+                        <img src="./img/avatar-3.png" alt="avatar-3">
+                        <h3>Paul Vishwas</h3>
+                        <p class="address">🇺🇸 PALO ALTO, CA</p>
+                        <div class="clear"></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae in donec in nisi vitae.
+                            Vestibulum
+                            pellentesque eget laoreet adipiscing.</p>
+                    </div>
+                </article>
+
+
+
+            </div>
+
+        </section>
+
+        <!-- section-3 | END -->
+
+
 
     </body>
 
