--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
 
         <!-- section-3 | END -->
 
-
+        <footer id="footer">
+            <p>Homejam &copy; 2022,	&nbsp; All RIghts Reserved</p>
+        </footer>
 
     </body>
 
