homejam final version

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             </div>
         </header>
 
+        <div class="go-top"><a href="#main-header"><i class="fa-solid fa-arrow-up-long"></i></a>
+
+        </div>
+
         <!-- header | END -->
 
         <!-- section-1 | START-->
@@ -176,7 +180,7 @@
         <!-- section-3 | END -->
 
         <footer id="footer">
-            <p>Homejam &copy; 2022,	&nbsp; All RIghts Reserved</p>
+            <p>Homejam &copy; 2022, &nbsp; All RIghts Reserved</p>
         </footer>
 
     </body>
