--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="./img/favicon.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a homejam template">
         <title>Homejam | Home</title>
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="icon" href="./img/favicon.png">
+        <link rel="stylesheet" media="only screen and (max-width: 480px)" href="./css/mobile.css">
+
         <script src="https://kit.fontawesome.com/2f591f9e97.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +38,7 @@
                 <div class="clear"></div>
                 <div class="about">
                     <h2>Cari Cari</h2>
-                    <p>Live from their sofa to yours. Get closer to your <br> favorite artists, and never miss out.</p>
+                    <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, tempora!</p>
                 </div>
             </div>
         </header>
