--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="./img/favicon.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:image" content="./img/bg.png" />
         <meta name="description" content="This is a homejam template">
         <title>Homejam | Home</title>
         <link rel="stylesheet" href="./css/style.css">
@@ -38,7 +39,8 @@
                 <div class="clear"></div>
                 <div class="about">
                     <h2>Cari Cari</h2>
-                    <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, tempora!</p>
+                    <p>Live from their sofa to yours. Get closer to your favorite artists, and never miss out. Lorem
+                        ipsum, dolor sit amet consectetur adipisicing elit. Eaque, tempora!</p>
                 </div>
             </div>
         </header>
